--- a/src/style.css
+++ b/src/style.css
@@ -492,11 +492,11 @@ html {
 
 /* Overlays */
 .overlay {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.85);
   display: none;
   flex-direction: column;
@@ -505,6 +505,29 @@ html {
   z-index: 100;
   text-align: center;
   backdrop-filter: blur(10px);
+}
+
+.button-column {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  align-items: center;
+}
+
+.overlay button:disabled {
+  opacity: 0.3;
+  cursor: not-allowed;
+  filter: grayscale(1);
+}
+
+#splash-screen {
+  background: url('/splash.webp') no-repeat center center;
+  background-size: cover;
+}
+
+#splash-screen h1 {
+  text-shadow: 0 0 30px #000, 2px 2px 10px #000;
+  color: #f39c12;
 }
 
 .overlay h1 {
